--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>To-Do Next</title>
         <!-- <title>Where do I start?</title> -->
         <!-- <title>Top of the List</title> -->
-        <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="stylesheet" type="text/css" href="styles/main.css">
     </head>
     <body>
         <!-- <image src="assets/notebookLines.png" width="1000px"></image> -->
@@ -128,7 +128,8 @@
             </section>
         </main>
 
-        <script src="main.js"></script>
+        <script src="scripts/main.js"></script>
+
        <!-- Fonts from Adobe Fonts: Klee One and FF Prater -->
        <script>
             (function(d) {
