--- a/index.html
+++ b/index.html
@@ -5,32 +5,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>To-Do Next</title>
-        <!-- <title>Where do I start?</title> -->
-        <!-- <title>Top of the List</title> -->
         <link rel="stylesheet" type="text/css" href="styles/main.css">
     </head>
     <body>
-        <!-- <image src="assets/notebookLines.png" width="1000px"></image> -->
         <main class="container">
+            <nav id="navigation">
+                <a id="about" href="./pages/about.html">About</a>
+            </nav>            
             <header>
                 <h1> 
                     So. You have a lot of work to do. It's okay.
                 </h1>
             </header>
-            <section>
-                
-                <h2 class="subtitle">
-                    Sometimes when we have a lot on our plate it can be so overwhelming that we don't even know where to start. I refer to this as "thrashing".
-                </h2>
-                <!-- Brushed up on my "thrashing" definition here: http://www.thrashing.com/thrashing-in-computer-science.html -->
-                <p>
-                    "Thrashing" is a term used in computer science to describe when a system is given so many tasks to manage simultaneously that it overwhelms the memory trying to decide what to tackle first. This often causes reduced functionality or system failure. Fundamentally, I feel that humans do the same thing (I know I do all the time). Sometimes we just need a tool to help us weigh our options, and make an informed suggestion for where to begin. I have created a small system that may be able to help you with this process.
-                </p>
-                <!-- I may not want to start with this. This disclaimer seems a bit confusing in the beginning, maybe it is triggered by output stuff -->
-                <p>
-                    Please note that the output from this site does just that: provides suggestions. Each time something generated behind the scenes is presented, it is merely something for you, the viewer of the screen and the completer of tasks, to respond to. If you receive a suggestion and think it's a terrible idea, then congratulations! You have just eliminated something which you do not want to start with :)
-                </p>
-           </section>
            <section id="begin">
                <h2>
                    Let's have a look at that list of yours.
@@ -43,8 +29,12 @@
                     In through the nose, hold for a few seconds, out through the mouth until you have completely let go of all the air you were holding on to.
                 </p>
                 <p>
-                    With this fresh start, you can begin to populate the input fields below. Please add a few items from your list in each section as well as how many minutes you think it will take to complete them.
+                    With this fresh start, you can begin to populate the input fields below. 
                 </p>
+                <p id="directions">
+                    Please add a few items from your list in each section as well as how many minutes you think it will take to complete them.
+                </p>
+
            </section>
            <section class="toDo">
                 <label for="workList">
@@ -118,17 +108,13 @@
                 <label>
                     When you're ready, you can submit your tasks to be processed.
                 </label>
-                <input type="submit" id="submit" value="Generate Suggestion">
-            </section>
-            <section id="outputSect">
-                <p id="output"></p>
-            </section>
-            <section id="conclusionSect">
-                <p id="conclusion"></p>
+                <a href="./pages/results.html">
+                    <input type="submit" id="submit" value="Generate Suggestion">
+                </a>
             </section>
         </main>
 
-        <script src="scripts/main.js"></script>
+        <script src="./scripts/main.js"></script>
 
        <!-- Fonts from Adobe Fonts: Klee One and FF Prater -->
        <script>
