removed commented code duplicates between results and main.js, activated generate link

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                 <label>
                     When you're ready, you can submit your tasks to be processed.
                 </label>
-                <!-- <a href="./pages/results.html"> -->
+                <a href="./pages/results.html">
                     <input type="submit" id="submit" value="Generate Suggestion">
-                <!-- </a> -->
+                </a>
             </section>
         </main>
 
