made code replace work tasks from local storage when returned to

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </section>
             <section class="toDo">
                 <label for="otherList">
-                    Are there any chores to attend to? Any things you need to do for you? (This involves a shower, food, water, things you need but may be forgetting).
+                    Are there any chores to attend to? Any things you need to do for you? (This involves a shower, meal, water, things you need but may be forgetting).
                 </label>
                 <ul id="otherList">
                     <li>
