--- a/pages/about.html
+++ b/pages/about.html
@@ -14,40 +14,35 @@
             </nav>
             <header>
                 <h1> 
-                    A tool for you.
+                    A tool for you!
                 </h1>
             </header>
             <section>
-                
                 <h2 class="subtitle">
                     Sometimes when we have a lot on our plate it can be so overwhelming that we don't even know where to start. I refer to this as "thrashing".
                 </h2>
                 <!-- Brushed up on my "thrashing" definition here: http://www.thrashing.com/thrashing-in-computer-science.html -->
-                <p>
-                    "Thrashing" is a term used in computer science to describe when a system is given so many tasks to manage simultaneously that it overwhelms the memory trying to decide what to tackle first. This often causes reduced functionality or system failure. Fundamentally, I feel that humans do the same thing (I know I do all the time). Sometimes we just need a tool to help us weigh our options, and make an informed suggestion for where to begin. I have created a small system that may be able to help you with this process.
+                <p id="thrashing">
+                  "Thrashing" is a term used in computer science to describe when a system is given so many tasks to manage simultaneously that it overwhelms the memory trying to decide what to tackle first. This often causes reduced functionality or system failure.
                 </p>
-                <!-- I may not want to start with this. This disclaimer seems a bit confusing in the beginning, maybe it is triggered by output stuff -->
                 <p>
-                    Please note that the output from this site does just that: provides suggestions. Each time something generated behind the scenes is presented, it is merely something for you, the viewer of the screen and the completer of tasks, to respond to. If you receive a suggestion and think it's a terrible idea, then congratulations! You have just eliminated something which you do not want to start with :)
+                  Fundamentally, I feel that humans do the same thing (I know I do all the time). Sometimes we just need a tool to help us weigh our options, and make an informed suggestion for where to begin. Because of this, I decided to create a small system that may be able to help users like you with this process.
+                </p>
+                <p>
+                  Please note that the output from this site does just that: provides suggestions. Each time something generated behind the scenes is presented, it is merely something for you, the viewer of the screen and the completer of tasks, to respond to. If you receive a suggestion and think it's a terrible idea, then congratulations! You have just eliminated something which you do not want to start with :)
                 </p>
            </section>
-           <!-- <section id="begin">
-               <h2>
-                   Let's have a look at that list of yours.
-               </h2>
-               // Emphpasis
-                <p>
-                    Before you begin, I would like to invite you to take a deep breath.
-                </p>
-                <p>
-                    In through the nose, hold for a few seconds, out through the mouth until you have completely let go of all the air you were holding on to.
-                </p>
-                <p>
-                    With this fresh start, you can begin to populate the input fields below. Please add a few items from your list in each section as well as how many minutes you think it will take to complete them.
-                </p>
-           </section> -->
+           <section>
+             <h2 id="Credits">
+               Credits
+             </h2>
+             <p>
+               This website was created by <span id="author">Shayla Lee © 2022</span> for Advanced Critical Computation at Parsons The New School for Design.
+             </p>
+           </section>
+           
 
-        <script src="../scripts/about.js"></script>
+        <!-- <script src="../scripts/about.js"></script> -->
 
        <!-- Fonts from Adobe Fonts: Klee One and FF Prater -->
        <script>
