style and instructions update to home page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
                <h2>
                    Let's have a look at that list of yours.
                </h2>
-                <!-- Emphasis: -->
                 <p>
                     Before you begin, I would like to invite you to take a deep breath.
                 </p>
@@ -31,10 +30,15 @@
                 <p>
                     With this fresh start, you can begin to populate the input fields below. 
                 </p>
+
+           </section>
+           <section id="instructions">
+                <h1>
+                    Instructions:
+                </h1>
                 <p id="directions">
                     Please add a few items from your list in each section as well as how many minutes you think it will take to complete them.
                 </p>
-
            </section>
            <section class="toDo">
                 <label for="workList">
