list item displays first task on results page

--- a/pages/results.html
+++ b/pages/results.html
@@ -12,6 +12,26 @@
     <body>
         <main class="container">
             <a id="toMain" href="../index.html">Back to your list</a>
+            <section id="outputList">
+                <h1>
+                    Your suggested to-do list order:
+                </h1>
+                <ol>
+                    <li class="todo"></li>
+                    <li class="todo"></li>
+                    <li class="todo"></li>
+                    <li class="todo"></li>
+                    <li class="todo"></li>
+                    <li class="todo"></li>
+                    <li class="todo"></li>
+                    <li class="todo"></li>
+                    <li class="todo"></li>
+                    <li class="todo"></li>
+                    <li class="todo"></li>
+                    <li class="todo"></li>
+                </ol>
+            </section>
+           
             <section id="outputSect">
                 <p id="output"></p>
             </section>
