added some styling to the about and back to list links

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <nav id="navigation">
-            <a id="about" href="./pages/about.html">About</a>
+            <a id="about" href="./pages/about.html">About the site</a>
         </nav>
         <main class="container">            
             <header>
