--- a/pages/about.html
+++ b/pages/about.html
@@ -10,7 +10,7 @@
     <body>
         <main class="container">
             <nav id="navigation">
-                <a id="toMain" href="../index.html">Back to your list</a>
+                <a id="toMain" href="../index.html">Back to <br>your list</a>
             </nav>
             <header>
                 <h1> 
