--- a/pages/results.html
+++ b/pages/results.html
@@ -12,6 +12,7 @@
     <body>
         <main class="container">
             <a id="toMain" href="../index.html">Back to your list</a>
+            <a id="about" href="./about.html">About the site</a>
             <section id="outputList">
                 <h1>
                     Your suggested to-do list order:
