--- a/pages/results.html
+++ b/pages/results.html
@@ -5,8 +5,6 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>To-Do Next</title>
-        <!-- <title>Where do I start?</title> -->
-        <!-- <title>Top of the List</title> -->
         <link rel="stylesheet" type="text/css" href="../styles/results.css">
     </head>
     <body>
@@ -17,16 +15,8 @@
                 <h1>
                     Your suggested to-do list order:
                 </h1>
+                <!-- Only 3 list items are possible -->
                 <ol>
-                    <li class="todo"></li>
-                    <li class="todo"></li>
-                    <li class="todo"></li>
-                    <li class="todo"></li>
-                    <li class="todo"></li>
-                    <li class="todo"></li>
-                    <li class="todo"></li>
-                    <li class="todo"></li>
-                    <li class="todo"></li>
                     <li class="todo"></li>
                     <li class="todo"></li>
                     <li class="todo"></li>
