restyled the back to your list button on results page to match about page

--- a/pages/results.html
+++ b/pages/results.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <main class="container">
-            <a id="toMain" href="../index.html">Back to your list</a>
+            <a id="toMain" href="../index.html">Back to <br>your list</a>
             <a id="about" href="./about.html">About the site</a>
             <section id="outputList">
                 <h1>
